# mu

./: .ai-review.json  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFF_2026-05-24T002236Z.md  HANDOFF_2026-05-25T023000Z.md  LICENSE  LICENSING.md  MORNING.md  MORNING_2026-05-12.md  MORNING_2026-05-13.md  MORNING_2026-05-13b.md  MORNING_2026-05-13c.md  MORNING_2026-05-13e.md  MORNING_2026-05-13f.md  MORNING_2026-05-14c-mu-nat.md  MORNING_2026-05-14d-mu-fb0.md  MORNING_2026-05-14g-mu-kgu5.md  MORNING_2026-05-21.md  MORNING_2026-05-26.md  MORNING_2026-05-29-ranking.md  MORNING_2026-05-29.md  MU.md  README.md  justfile
.beads/: config.yaml  (+1 more)
crates/mu-ai/: Cargo.toml
crates/mu-ai/examples/: compaction-bench.rs  compaction-fixtures.rs  dump-compaction.rs
crates/mu-ai/src/: catalog_probe.rs  faux.rs  lib.rs
crates/mu-ai/src/auth/: mod.rs  openai_codex.rs
crates/mu-ai/src/context/: anthropic.rs  compaction_cache_tests.rs  mod.rs
crates/mu-ai/src/providers/: anthropic.rs  anthropic_tests.rs  mod.rs  ollama.rs  openai.rs  openai_api.rs  openai_codex.rs  openai_codex_tests.rs  openai_responses.rs  openai_tests.rs  openrouter.rs  openrouter_tests.rs  output_limits.rs  sse.rs  tool_dialect.rs  vllm.rs
crates/mu-bridge/: Cargo.toml  pyproject.toml
crates/mu-bridge/src/: lib.rs  parse.rs  track.rs  types.rs
crates/mu-coding/: Cargo.toml
crates/mu-coding/examples/: pty_probe.rs
crates/mu-coding/src/: ask.rs  lib.rs  models_sync.rs  resume.rs  sessions_index.rs
crates/mu-coding/src/analytics/: backfill.rs  compact.rs  mod.rs  query.rs  sink.rs
crates/mu-coding/src/analytics/fixtures/: overnight-2026-05-16.toml
crates/mu-coding/src/console/: cc_data.rs  data.rs  html.rs  mark.rs  mod.rs  time.rs  views.rs
crates/mu-coding/src/serve/: auth.rs  daemon_info.rs  dialogue_poller.rs  discovery_bootstrap.rs  dispatch.rs  factory.rs  forwarder.rs  mailbox.rs  mcp.rs  mesh.rs  mesh_consume.rs  mesh_dialogue.rs  mod.rs  pipeline.rs  presence.rs  provider_status.rs  pty_spawn.rs  sessions.rs  worker.rs
crates/mu-coding/src/serve/discovery/: file_backend.rs  local_registry.rs  mod.rs
crates/mu-coding/src/serve/handlers/: auth.rs  capabilities.rs  daemon.rs  mailbox.rs  mod.rs  session.rs
crates/mu-coding/src/skills/: aws_recon.rs  mod.rs
crates/mu-coding/src/tools/: action_recall.rs  autonomy.rs  aws_recon.rs  bash.rs  dialogue.rs  discover.rs  edit.rs  edit_matcher.rs  glob.rs  grep.rs  index_recall.rs  ls.rs  mailbox.rs  memory_recall.rs  mod.rs  path.rs  read.rs  spawn_worker.rs  todo.rs  watch.rs  write.rs
crates/mu-coding/tests/: anthropic_ls_smoke.rs  anthropic_read_smoke.rs  anthropic_write_smoke.rs  ask_smoke.rs  auth_smoke.rs  boot_smoke.rs  mailbox_smoke.rs  mu_pex_smoke.rs  pipeline_smoke.rs  serve_smoke.rs
crates/mu-coding/tests/common/: mod.rs
crates/mu-core/: Cargo.toml
crates/mu-core/config/: models.default.toml
crates/mu-core/examples/: compaction-bench.rs
crates/mu-core/src/: auditor.rs  aws.rs  capability.rs  catalog_sync.rs  command_journal.rs  config.rs  context_attribution.rs  context_renderer.rs  event_log.rs  forensics.rs  hooks.rs  lib.rs  lsp_client.rs  model_catalog.rs  pricing.rs  protocol.rs  route_catalog.rs  session_status.rs  skill.rs  t4c_source.rs  tool_registry.rs  transport.rs  usage_history.rs
crates/mu-core/src/agent/: capabilities.rs  continuation.rs  loop_.rs  loop_tests.rs  mod.rs  provider.rs  tool.rs  tool_result_filter.rs  types.rs
crates/mu-core/src/context/: assembly.rs  cache.rs  capability_hints.rs  compaction.rs  event.rs  kx_hints.rs  mod.rs  renderer.rs  rope.rs
crates/mu-core/src/protocol/: auth.rs  autonomy.rs  discovery.rs  events.rs  jsonrpc.rs  mailbox.rs  session.rs  stats.rs
crates/mu-core/src/skill/: loader.rs  mod.rs
crates/mu-dialogue/: Cargo.toml  README.md
crates/mu-dialogue/deploy/: mu-dialogue-serve  mu_dialogue.rc
crates/mu-dialogue/src/: main.rs  presence.rs
crates/mu-events-py/: Cargo.toml
crates/mu-events-py/src/: lib.rs
crates/mu-solo/: Cargo.toml  example.solo.toml
crates/mu-solo/examples/: viewport_test.rs
crates/mu-solo/src/: app.rs  client.rs  config.rs  input.rs  lib.rs  mcp_status.rs  menu.rs  notify.rs  picker.rs  render.rs  skills.rs  transcript.rs  viewport.rs
crates/mu-tui/: Cargo.toml
crates/mu-tui/src/: main.rs  mu_client.rs
crates/providers/mu-anthropic/: AGENTS.md  Cargo.toml  HANDOFF.md  INTEGRATION-PLAN.md  INTEGRATION.md
crates/providers/mu-anthropic-py/: .gitignore  Cargo.toml  cc_log_smoke.py
crates/providers/mu-anthropic-py/src/: lib.rs
crates/providers/mu-anthropic/examples/: drift_check.rs
crates/providers/mu-anthropic/specifications/: MANIFEST.md  llms-full.txt.xz
crates/providers/mu-anthropic/src/: accumulate.rs  content.rs  finite.rs  json.rs  lib.rs  message.rs  request.rs  response.rs  stream.rs
crates/providers/mu-anthropic/tests/: cc_log_parse_probe.rs  tier3_opus48_ground_truth.rs
crates/providers/mu-openai/: AGENTS.md  Cargo.toml  INTEGRATION.md
crates/providers/mu-openai-chat/: Cargo.toml
crates/providers/mu-openai-chat/src/: accumulate.rs  lib.rs  request.rs  response.rs
crates/providers/mu-openai/examples/: openai_drift_check.rs
crates/providers/mu-openai/specifications/: MANIFEST.md  openapi.yaml.xz
crates/providers/mu-openai/src/: accumulate.rs  client.rs  finite.rs  json.rs  lib.rs  request.rs  response.rs  sse.rs  stream.rs
crates/providers/mu-openai/tests/: golden.rs
crates/t4c/: AGENTS.md  Cargo.toml
crates/t4c/docs/: help-ai-standard.md
crates/t4c/src/: bench.rs  capability.rs  catalog.rs  chain.rs  classify.rs  cli.rs  embedder.rs  helpai.rs  lib.rs  main.rs  path.rs  rank.rs  registry.rs  semantic.rs  snapshot.rs  source.rs
crates/t4c/src/config/: curated.default.toml
crates/t4c/templates/: help-ai.sh
crates/t4c/tests/: cli_warmstart.rs
mesh-slice/: .gitattributes  Cargo.toml  README.md
mesh-slice/.cargo/: config.toml
mesh-slice/src/: adapter.rs  agent.rs  capability.rs  config.rs  contract.rs  lib.rs  proxy.rs  service.rs
mesh-slice/tests/: bridge_smoke.rs
(+201 files in other folders)
