[workspace]
resolver = "2"
members = [
    "crates/mu-core",
    "crates/mu-ai",
    "crates/mu-coding",
    "crates/mu-tui",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/sahuagin/mu"
authors = ["Thaddeus Covert <tcovert@sahuagin.net>"]
rust-version = "1.80"

[workspace.dependencies]
# runtime + I/O
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures = "0.3"
async-trait = "0.1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# storage
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI + errors + logging
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# crypto / OAuth helpers
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2"
urlencoding = "2"
oauth2 = "4.4"
webbrowser = "1"
dirs = "5"

# shell-arg tokenization (bash tool)
shlex = "1"

# TUI (used by mu-coding's interactive mode; later)
ratatui = "0.28"
crossterm = "0.28"

# MCP (used for built-in MCP servers and client; later)
rmcp = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
