[workspace]
resolver = "2"
members = [
    "crates/mu-core",
    "crates/mu-ai",
    "crates/mu-coding",
    "crates/mu-tui",
    "crates/mu-solo",
    "crates/mu-bridge",
    "crates/t4c",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/sahuagin/mu"
authors = ["Thaddeus Covert <tcovert@sahuagin.net>"]
# 1.91: str::floor_char_boundary (used in mu-solo) stabilized here. Bumped from
# 1.80 to be honest about the real minimum rather than #[allow]-ing the lint.
rust-version = "1.91"

[workspace.dependencies]
# runtime + I/O
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures = "0.3"
async-trait = "0.1"

# serialization
# `rc` feature enables Serialize/Deserialize for Arc<T> / Rc<T> — used
# by the rope's Arc<str> content/id storage (mu-yqeq.2).
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# storage
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI + errors + logging
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# crypto / OAuth helpers
sha2 = "0.10"
blake3 = "1"
# mu-7rk (mu-yox): constant-time equality for BEARER token digest compare.
subtle = "2"
base64 = "0.22"
rand = "0.8"
url = "2"
urlencoding = "2"
oauth2 = "5"
webbrowser = "1"
dirs = "5"

# shell-arg tokenization (bash tool)
shlex = "1"

# mu-slat Phase 3: Rust-owned pty for pot worker spawn + vt100 screen
# scraping (readiness detection + observability). Both offline-cached.
portable-pty = "0.9"
vt100 = "0.16"

# TUI (used by mu-coding's interactive mode; later)
ratatui = "0.30"
crossterm = "0.28"

# MCP (used for built-in MCP servers and client; later)
rmcp = { version = "1", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1
