[workspace]
resolver = "2"
members = [
    "crates/mu-core",
    "crates/mu-ai",
    "crates/providers/mu-anthropic",
    "crates/providers/mu-anthropic-py",
    "crates/providers/mu-openai",
    "crates/mu-events-py",
    "crates/mu-coding",
    "crates/mu-tui",
    "crates/mu-solo",
    "crates/mu-bridge",
    "crates/t4c",
    "crates/mu-dialogue",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/sahuagin/mu"
authors = ["Thaddeus Covert <tcovert@sahuagin.net>"]
# 1.91: str::floor_char_boundary (used in mu-solo) stabilized here. Bumped from
# 1.80 to be honest about the real minimum rather than #[allow]-ing the lint.
rust-version = "1.91"

[workspace.dependencies]
# runtime + I/O
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
# mu-sqn: security floor for rustls-webpki, pulled transitively via reqwest's
# rustls-tls stack. Clears dependabot GHSA-82j2-j2ch-gfr8 (high, CRL DoS panic,
# fixed 0.103.13), GHSA-xgp8-3hg3-c2mh + GHSA-965h-392x-2mh5 (low, name-constraint
# bypasses, fixed 0.103.12). The lockfile already resolves 0.103.13; this direct
# floor makes that durable so a future `cargo update` can't silently drop below
# the patched version and reopen the advisories. default-features = false keeps it
# feature-neutral (features unify with what rustls already requests).
rustls-webpki = { version = "0.103.13", default-features = false }
futures = "0.3"
async-trait = "0.1"

# serialization
# `rc` feature enables Serialize/Deserialize for Arc<T> / Rc<T> — used
# by the rope's Arc<str> content/id storage (mu-yqeq.2).
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
figment = { version = "0.10", features = ["toml", "env"] }

# storage
rusqlite = { version = "0.31", features = ["bundled"] }
# mu-2332: t4c's warm-start snapshot. rkyv archives the post-discovery registry
# (capabilities + present/absent + help text + embedding vectors) so a `find`
# loads it zero-copy via mmap and does NO env probing. f32 vectors are rkyv's
# best case. The snapshot is CACHE, never source of truth — schema-version /
# catalog-hash / PATH-hash mismatch self-heals via rediscovery, so rkyv's
# schema-evolution brittleness is acceptable by design.
rkyv = { version = "0.8" }
memmap2 = { version = "0.9" }

# CLI + errors + logging
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
# `release_max_level_info` compiles out debug!/trace! in any build with
# debug_assertions OFF — i.e. the `release` profile ships info+ only, no
# debug logging. The `debugrelease` profile sets debug-assertions = true,
# which flips that gate back on, so it keeps debug!/trace! (gated at runtime
# by RUST_LOG) while staying release-fast. `debug` keeps them too. This is
# the "fast + debuggable, stripped in release" split the profiles intend.
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# crypto / OAuth helpers
sha2 = "0.10"
blake3 = "1"
# mu-7rk (mu-yox): constant-time equality for BEARER token digest compare.
subtle = "2"
base64 = "0.22"
rand = "0.8"
url = "2"
urlencoding = "2"
oauth2 = "5"
webbrowser = "1"
dirs = "5"

# shell-arg tokenization (bash tool)
shlex = "1"


# TUI (used by mu-coding's interactive mode; later)
ratatui = "0.30"
crossterm = "0.28"

# MCP (used for built-in MCP servers and client; later)
rmcp = { version = "1", default-features = false }

[profile.release]
lto = "thin"
codegen-units = 1

# Bug-chasing profile (operator pattern, memory 7bc10cf4): release-grade
# optimization + threading so timing-sensitive bugs (TUI rendering races,
# scrollback commits) still reproduce, with debug info + assertions for
# diagnosis. Use via `just solo-debugrelease` or
# `cargo run --profile debugrelease --bin mu-solo`.
[profile.debugrelease]
inherits = "release"
debug = true
debug-assertions = true
