[package]
name = "mesh-slice"
version = "0.0.0"
edition = "2021"
publish = false

# mu-wxc4 first slice: NATS-backed typed service mesh. Detached from the mu
# workspace (its own [workspace]) so it builds fast without perturbing the
# main build; promotes to crates/mu-mesh once the pattern is proven.
[workspace]

[[bin]]
name = "mu-mesh-bridge"
path = "src/bin/bridge.rs"

[dependencies]
anyhow = "1.0.103"
async-nats = "0.49.1"
biscuit-auth = "6.0.0"
bytes = "1.12.1"
futures = "0.3.32"
rmcp = { version = "1", features = ["server", "client", "transport-io", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.4", features = ["rt-multi-thread", "macros", "time", "io-std", "process", "signal"] }
ulid = { version = "3.0.0", features = ["serde"] }

[dev-dependencies]

[[bin]]
name = "mu-mesh-svc"
path = "src/bin/svc.rs"

[[bin]]
name = "mu-mesh-check"
path = "src/bin/check.rs"
