[package]
name = "mu-ai"
description = "LLM provider abstraction for mu — anthropic, openai, openrouter."
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
mu-core = { path = "../mu-core" }
mu-anthropic = { path = "../providers/mu-anthropic" }
mu-openai = { path = "../providers/mu-openai" }
mu-openai-chat = { path = "../providers/mu-openai-chat" }
tokio = { workspace = true }
reqwest = { workspace = true }
# mu-sqn: anchors the workspace rustls-webpki security floor (see root
# Cargo.toml). mu-ai owns the outbound TLS calls (anthropic/openai/openrouter),
# so the version guard for the rustls-tls cert path lives here. Not imported
# directly — the floor takes effect by being a resolved direct dependency.
rustls-webpki = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = "1"
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
oauth2 = { workspace = true }
webbrowser = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = "3"
