[project]
name = "mu-bridge"
version = "0.0.1"
description = "Claude-code JSONL parsing + mu event conversion + forensic analysis (Rust via PyO3)"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Thaddeus Covert", email = "tcovert@sahuagin.net" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B"]
