[package]
name = "mu-coding"
description = "The mu binary — modes (rpc/tui/ask/orchestrate), tools, sessions, extensions."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mu"
path = "src/bin/mu.rs"

[dependencies]
mu-core = { path = "../mu-core" }
mu-ai = { path = "../mu-ai" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
