[package]
name = "mu-coding"
description = "The mu binary — modes (rpc/tui/ask/orchestrate), tools, sessions, extensions."
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mu"
path = "src/bin/mu.rs"

[dependencies]
mu-core = { path = "../mu-core" }
mu-ai = { path = "../mu-ai" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
shlex = { workspace = true }
sha2 = { workspace = true }
# mu-7rk (mu-yox): constant-time BEARER digest compare in serve::auth.
subtle = { workspace = true }
# mu-038: pluggable session discovery (async trait + random daemon_id)
async-trait = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
# mu-upb: home directory for on-disk event log path
dirs = { workspace = true }
# MCP server (rmcp SDK) for session status resources + mailbox tools
rmcp = { workspace = true, features = ["server"] }

[dev-dependencies]
futures = { workspace = true }
