[package]
name = "mu-coding"
description = "The mu binary — modes (rpc/tui/ask/orchestrate), tools, sessions, extensions."
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mu"
path = "src/bin/mu.rs"

[dependencies]
mu-core = { path = "../mu-core" }
mu-ai = { path = "../mu-ai" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
shlex = { workspace = true }
sha2 = { workspace = true }
# mu-7rk (mu-yox): constant-time BEARER digest compare in serve::auth.
subtle = { workspace = true }
# mu-038: pluggable session discovery (async trait + random daemon_id)
async-trait = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
# mu-upb: home directory for on-disk event log path
dirs = { workspace = true }
# MCP server (rmcp SDK) for session status resources + mailbox tools, and
# MCP client (mu-yc6) for importing tools from external servers over
# Streamable HTTP (code-index et al.)
rmcp = { workspace = true, features = [
    "server",
    "client",
    "transport-streamable-http-client-reqwest",
] }
# mu-console web operator console (read-only v1).
axum = "0.8"

[dev-dependencies]
futures = { workspace = true }
# mu-yc6 smoke tests: stub MCP server over Streamable HTTP (mirrors how
# code-index-mcp serves; axum hosts rmcp's tower StreamableHttpService)
rmcp = { workspace = true, features = ["transport-streamable-http-server"] }
# mu-operator-mark-5mwr: isolated event dirs for mark_session tests
# (same crate+major mu-core's tests already use).
tempfile = "3"
