[package]
name = "mu-core"
description = "Agent loop, JSON-RPC protocol, transport, and state for mu."
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
tiktoken-rs = "0.11"  # mu-kgu.10: real-tokenizer proxy for estimate_tokens; cl100k_base ≈ Anthropic's BPE
