[package]
name = "mu-core"
description = "Agent loop, JSON-RPC protocol, transport, and state for mu."
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
tiktoken-rs = "0.11"  # mu-kgu.10: real-tokenizer proxy for estimate_tokens; cl100k_base ≈ Anthropic's BPE
serde_yaml = { workspace = true }
toml = { workspace = true }  # mu-l1z: layered config TOML loader
figment = { workspace = true }  # config-backed provider/model catalog
dirs = { workspace = true }  # mu-l1z: resolves ~/.config and platform-specific paths
t4c = { path = "../t4c" }  # mu-kex4.6 phase 3: project mu's live tools+skills into t4c (leaf: mu-core -> t4c only)
anyhow = { workspace = true }  # impl t4c::RegistrySource — its capabilities() returns anyhow::Result

[dev-dependencies]
tempfile = "3"
# mu-8stm.1: start_paused tests for the approval-gate timeout — auto-advance
# past APPROVAL_GATE_TIMEOUT instead of waiting it out in real time.
tokio = { workspace = true, features = ["test-util"] }
