[package]
name = "mu-dialogue"
description = "Networked multi-peer inter-agent dialogue channel (say/poll/history) over MCP."
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mu-dialogue"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Pure rmcp transport — StreamableHttpService (HTTP) + stdio, matching
# agent-mcp/beadsd. No hand-rolled MCP. (at-revive-dialogue-mcp-8rk)
rmcp = { workspace = true, features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
] }
axum = "0.8"
ulid = "1"
# Optional etcd-lease presence (src/presence.rs): etcd v3 JSON gateway over
# plain HTTP — deliberately no gRPC/tonic. All three are existing workspace
# deps; a config with presence disabled never exercises them.
reqwest = { workspace = true }
toml = { workspace = true }
base64 = { workspace = true }
