[package]
name = "mu-solo"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
description = "Standalone single-pane chat TUI for mu serve — claude-code-inspired UX, library + main split, intentionally small."

# Library half: exposes App, Client, Render so they can be used by other
# binaries or tested independently.
[lib]
name = "mu_solo"
path = "src/lib.rs"

# Binary half: thin wrapper that wires lib together.
[[bin]]
name = "mu-solo"
path = "src/bin/mu-solo.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
# Layered config: defaults < ~/.config/mu/solo.toml < env (MU_SOLO_) < CLI.
# TUI-local keys land in App state; session-bound keys forward to `mu serve`
# (flags) and `create_session` (params). See src/config.rs for the split.
figment = { version = "0.10", features = ["toml", "env"] }
# `dirs` resolves XDG config / home paths cross-platform (rather than
# hand-rolling $HOME / $XDG_CONFIG_HOME). Tiny crate, transitive-light.
dirs = "5"
ansi-to-tui = "8"

[dev-dependencies]
# Used by config.rs roundtrip tests. figment already pulls in `toml`
# transitively for its TOML provider; we depend on it directly here to
# (de)serialize SoloConfig in tests without going through figment.
toml = { workspace = true }
