[package]
name = "mu-tui"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
description = "TUI client for mu serve — Command Center, session tree, context inspector"

[[bin]]
name = "mu-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
throbber-widgets-tui = "0.7.1"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mu-core = { path = "../mu-core" }
