[package]
name = "mu-openai-chat"
description = "OpenAI Chat Completions wire protocol: typed request/response/streaming-chunk + serde + delta accumulation. Standalone — knows nothing about mu."
version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
